# age-lens

./: Cargo.toml  LICENSE  README.md  SKILLS.md  build.rs
.github/workflows/: ci.yml
app/: Cargo.toml
app/src/: lib.rs
client/: Cargo.toml  age_lens_client.idl  build.rs
client/src/: age_lens_client.rs  lib.rs
docs/plans/: 2026-06-30-agelens-architecture.md  2026-06-30-agelens-consumer-integration.md  2026-06-30-agelens-gtest.md  2026-06-30-agelens-receipts-architecture.md  2026-06-30-agelens-receipts-spec.md  2026-06-30-agelens-receipts-tasks.md  2026-06-30-agelens-spec.md  2026-06-30-van-project-review.md  2026-06-30-van-readiness-prep.md
docs/van/: project-review-request.json
idl/: age_lens.idl
src/: lib.rs
tests/: gtest.rs
