[package]
name = "age-lens-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Generated client for the AgeLens program"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
sails-rs = { workspace = true, features = ["gclient"] }

[build-dependencies]
sails-rs = { workspace = true, features = ["build"] }
age-lens-app.workspace = true
